Updated with the code on the server.

--- a/html/templates/Programmer3.html
+++ b/html/templates/Programmer3.html
@@ -623,6 +623,7 @@ def AccessingData():
        The goal for this will be to find a way to implement the ability to create GeoMaps that dont conform to regular world maps.<br>
        I want to implement the ability to work with unconventional geo data and try to create useful visualizations.<br>
        The other thing I want to look into is, how to create GeoJSON files based on custom maps.</p>
+       <a class="btn btn-primary view-pdf" href="{{ url_for('PersonalProjectHS') }}" target="_blank">GeoMaps</a>
 
 </div>
 <div class="tab-pane fade" id="pills-fileupload" role="tabpanel" aria-labelledby="pills-fileupload-tab">
