--- a/html/templates/Folium.html
+++ b/html/templates/Folium.html
@@ -42,7 +42,7 @@
                             performance, and usability in mind. It works efficiently, can be extended with a lot of plugins,
                             has a beautiful and easy-to-use API.</p>
 
-                            <p>Advantages of PyCharm: <br><br></p>
+                            <p>Advantages of Folium: <br><br></p>
 
                             <ul>
                                 <li> With Folium, one can create a map of any location in the world as long as its latitude and longitude values are known. </li>
@@ -50,7 +50,7 @@
                                 which is a super useful feature.</li>
                             </ul>
 
-                            <p><br><br>Disadvantages of PyCharm: <br><br></p>
+                            <p><br><br>Disadvantages of Folium: <br><br></p>
 
                             <ul>
                                 <li> The disadvantages are that basemap expects you to obtain and manage shapefiles,
