--- a/html/templates/Prism.html
+++ b/html/templates/Prism.html
@@ -48,7 +48,7 @@
                                 so that you can fully leverage what the platform itself has to offer,
                                 but done in the MVVM way.<br></p>
 
-                            <p>Advantages of PyCharm: <br><br></p>
+                            <p>Advantages of Prism: <br><br></p>
 
                             <ul>
                                 <li>A plethora of productive shortcuts.</li>
@@ -56,7 +56,7 @@
                                 <li> of an array of plugins.</li>
                             </ul>
 
-                            <p><br><br>Disadvantages of PyCharm: <br><br></p>
+                            <p><br><br>Disadvantages of Prism: <br><br></p>
 
                             <ul>
                                 <li>The main disadvantage of using PyCharm is, it takes more space than other text</li>
