Adding js files and datasources for my personal project

--- a/html/templates/MongoDB.html
+++ b/html/templates/MongoDB.html
@@ -215,7 +215,7 @@
 
             <h3>PyMongo</h3>
 
-            <p>PyMongo is a Python module used to interface between MongoDB and Python applications. To install the Scikit-Learn library,
+            <p>PyMongo is a Python module used to interface between MongoDB and Python applications. To install the PyMongo library,
                 install onto your version of Python from command line using the following command:</p>
 
             <pre class="command-line language-bash" data-user="root" data-host="localhost" tabindex="0">
