--- a/html/templates/Programmer1.html
+++ b/html/templates/Programmer1.html
@@ -14,6 +14,10 @@
            aria-controls="pills-d3script" aria-selected="true">D3.JS Test Script</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" id="pills-personal-project-tab" data-toggle="pill" href="#pills-personal-project" role="tab"
+           aria-controls="pills-personal-project" aria-selected="true">Personal Project</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" id="pills-gantt-tab" data-toggle="pill" href="#pills-gantt" role="tab"
            aria-controls="pills-gantt" aria-selected="false">Gantt Chart</a>
     </li>
@@ -136,6 +140,12 @@ d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_data
 </script>
 </code>
 </pre>
+    </div>
+    <div class="tab-pane fade" id="pills-personal-project" role="tabpanel" aria-labelledby="pills-personal-project-tab">
+
+        <h3>The following is the link to my personal project:</h3>
+        <a class="btn btn-primary view-pdf" href="DBPersonalProject" target="_blank">Go</a>
+
     </div>
     <div class="tab-pane fade" id="pills-gantt" role="tabpanel" aria-labelledby="pills-gantt-tab">
         <hr/>
